Behaviour Tree cont.
Continuing to work on Behaviour Tree

--- a/FYP/Assembly-CSharp.csproj
+++ b/FYP/Assembly-CSharp.csproj
@@ -69,6 +69,7 @@
     <Compile Include="Assets\Scripts\EnemyAI.cs" />
     <Compile Include="Assets\Scripts\Inverter.cs" />
     <Compile Include="Assets\Scripts\Node.cs" />
+    <Compile Include="Assets\Scripts\NodeStates.cs" />
     <Compile Include="Assets\Scripts\Player.cs" />
     <Compile Include="Assets\Scripts\PlayerAI.cs" />
     <Compile Include="Assets\Scripts\PlayerAI_BehaviourTree.cs" />
